--- a/archives/toutiao-search/2024-02-13.md
+++ b/archives/toutiao-search/2024-02-13.md
@@ -1,56 +1,64 @@
 # 2024-02-13
 
-共 59 条
+共 66 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 13 2024 01:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 13 2024 02:00:35 GMT+0800 (China Standard Time) -->
 1. [贾玲瘦身后第一次见观众泪流满面](https://so.toutiao.com/search?keyword=贾玲瘦身后第一次见观众泪流满面)
-1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
+1. [中东多国谴责以色列进攻拉法计划](https://so.toutiao.com/search?keyword=中东多国谴责以色列进攻拉法计划)
 1. [看一条龙能多有“FUN儿”](https://so.toutiao.com/search?keyword=看一条龙能多有“FUN儿”)
 1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
+1. [以军对拉法发动海陆空全方位打击](https://so.toutiao.com/search?keyword=以军对拉法发动海陆空全方位打击)
+1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
 1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
 1. [摔炮的风还是吹到了伦敦](https://so.toutiao.com/search?keyword=摔炮的风还是吹到了伦敦)
 1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
-1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
-1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
-1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
-1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
-1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
-1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
-1. [最高检评《第二十条》：推卸与担当](https://so.toutiao.com/search?keyword=最高检评《第二十条》：推卸与担当)
-1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
-1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
 1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
-1. [《飞驰人生2》张驰终于不留遗憾](https://so.toutiao.com/search?keyword=《飞驰人生2》张驰终于不留遗憾)
-1. [2024中国网络视听年度盛典](https://so.toutiao.com/search?keyword=2024中国网络视听年度盛典)
-1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
-1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
-1. [尼日利亚最大银行CEO在美坠机身亡](https://so.toutiao.com/search?keyword=尼日利亚最大银行CEO在美坠机身亡)
+1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
+1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
+1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
+1. [最高检评《第二十条》：推卸与担当](https://so.toutiao.com/search?keyword=最高检评《第二十条》：推卸与担当)
+1. [过年的慵懒感到达顶峰](https://so.toutiao.com/search?keyword=过年的慵懒感到达顶峰)
+1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
+1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
+1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
 1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
-1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
-1. [雷佳音回应总演窝囊废](https://so.toutiao.com/search?keyword=雷佳音回应总演窝囊废)
-1. [张雨霏：被贾玲感动但为啥我没腹肌](https://so.toutiao.com/search?keyword=张雨霏：被贾玲感动但为啥我没腹肌)
+1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
+1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
+1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
+1. [尼日利亚最大银行CEO在美坠机身亡](https://so.toutiao.com/search?keyword=尼日利亚最大银行CEO在美坠机身亡)
 1. [你家过年吵架了吗](https://so.toutiao.com/search?keyword=你家过年吵架了吗)
-1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
-1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
-1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [2024中国网络视听年度盛典](https://so.toutiao.com/search?keyword=2024中国网络视听年度盛典)
 1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
-1. [特朗普“挑衅”言论激怒欧洲人](https://so.toutiao.com/search?keyword=特朗普“挑衅”言论激怒欧洲人)
-1. [春节档电影最大赢家竟是魏翔](https://so.toutiao.com/search?keyword=春节档电影最大赢家竟是魏翔)
 1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
-1. [女子背巨无霸香上山许愿](https://so.toutiao.com/search?keyword=女子背巨无霸香上山许愿)
-1. [普京：2023俄罗斯经济增长高于预期](https://so.toutiao.com/search?keyword=普京：2023俄罗斯经济增长高于预期)
+1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [《飞驰人生2》张驰终于不留遗憾](https://so.toutiao.com/search?keyword=《飞驰人生2》张驰终于不留遗憾)
+1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
 1. [山东一景区发生火灾 多辆车被烧毁](https://so.toutiao.com/search?keyword=山东一景区发生火灾+多辆车被烧毁)
-1. [拜登：特朗普打算给普京“开绿灯”](https://so.toutiao.com/search?keyword=拜登：特朗普打算给普京“开绿灯”)
-1. [2023年俄国内生产总值同比增长3.6%](https://so.toutiao.com/search?keyword=2023年俄国内生产总值同比增长3.6%)
+1. [春节后寒潮或将影响我国大部地区](https://so.toutiao.com/search?keyword=春节后寒潮或将影响我国大部地区)
+1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
+1. [英媒：英航母推迟参加北约军演](https://so.toutiao.com/search?keyword=英媒：英航母推迟参加北约军演)
+1. [一个人过年](https://so.toutiao.com/search?keyword=一个人过年)
+1. [女子背巨无霸香上山许愿](https://so.toutiao.com/search?keyword=女子背巨无霸香上山许愿)
+1. [雷佳音回应总演窝囊废](https://so.toutiao.com/search?keyword=雷佳音回应总演窝囊废)
 1. [贾玲瘦百斤备忘录曝光](https://so.toutiao.com/search?keyword=贾玲瘦百斤备忘录曝光)
-1. [《死侍3》全球首支预告发布](https://so.toutiao.com/search?keyword=《死侍3》全球首支预告发布)
+1. [特朗普“挑衅”言论激怒欧洲人](https://so.toutiao.com/search?keyword=特朗普“挑衅”言论激怒欧洲人)
+1. [西安热度大增](https://so.toutiao.com/search?keyword=西安热度大增)
+1. [张雨霏：被贾玲感动但为啥我没腹肌](https://so.toutiao.com/search?keyword=张雨霏：被贾玲感动但为啥我没腹肌)
+1. [拜登：特朗普打算给普京“开绿灯”](https://so.toutiao.com/search?keyword=拜登：特朗普打算给普京“开绿灯”)
+1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
+1. [春节档电影最大赢家竟是魏翔](https://so.toutiao.com/search?keyword=春节档电影最大赢家竟是魏翔)
+1. [联合国呼吁保护加沙地带平民](https://so.toutiao.com/search?keyword=联合国呼吁保护加沙地带平民)
+1. [《在暴雪时分》殷果演我八卦](https://so.toutiao.com/search?keyword=《在暴雪时分》殷果演我八卦)
+1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
+1. [沙特阿美暂停产能扩张计划](https://so.toutiao.com/search?keyword=沙特阿美暂停产能扩张计划)
+1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
 1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
+1. [普京：2023俄罗斯经济增长高于预期](https://so.toutiao.com/search?keyword=普京：2023俄罗斯经济增长高于预期)
+1. [2023年俄国内生产总值同比增长3.6%](https://so.toutiao.com/search?keyword=2023年俄国内生产总值同比增长3.6%)
+1. [《死侍3》全球首支预告发布](https://so.toutiao.com/search?keyword=《死侍3》全球首支预告发布)
 1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
 1. [认养一头牛折戟IPO](https://so.toutiao.com/search?keyword=认养一头牛折戟IPO)
-1. [春节后寒潮或将影响我国大部地区](https://so.toutiao.com/search?keyword=春节后寒潮或将影响我国大部地区)
-1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
-1. [《在暴雪时分》殷果演我八卦](https://so.toutiao.com/search?keyword=《在暴雪时分》殷果演我八卦)
 1. [广东人过年送礼三件套](https://so.toutiao.com/search?keyword=广东人过年送礼三件套)
 1. [白百何初三晒回娘家视频](https://so.toutiao.com/search?keyword=白百何初三晒回娘家视频)
 1. [马丽拜托各影院给第二十条多排片](https://so.toutiao.com/search?keyword=马丽拜托各影院给第二十条多排片)
@@ -61,6 +69,5 @@
 1. [华春莹发了迪丽热巴春晚民族舞](https://so.toutiao.com/search?keyword=华春莹发了迪丽热巴春晚民族舞)
 1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
 1. [老人身体欠佳坐车3天3夜与亲人见面](https://so.toutiao.com/search?keyword=老人身体欠佳坐车3天3夜与亲人见面)
-1. [一个人过年](https://so.toutiao.com/search?keyword=一个人过年)
 1. [巴勒斯坦总统阿巴斯访问卡塔尔](https://so.toutiao.com/search?keyword=巴勒斯坦总统阿巴斯访问卡塔尔)
 <!-- END TOUTIAO -->
